--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+ <!DOCTYPE html>
 <html>
   <h1>Hello world </h1>
+  <body>
+
+<h2>My First JavaScript</h2>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
+
+</body>
+</html> 
+
 </html>
+
